fixed ugly scrollbar issue for some browsers (chrome on PC)

--- a/app/assets/stylesheets/twocol.scss
+++ b/app/assets/stylesheets/twocol.scss
@@ -6,16 +6,16 @@
   .two-column-left {
     float: left;
     width: 300px;
-    overflow-y: scroll;
-    overflow-x: visible;
+    overflow-y: auto;
+    overflow-x: hidden;
     position: relative;
   }
 
   .two-column-right {
     float: left;
     width: calc(100% - 310px);
-    overflow-y: scroll;
-    overflow-x: visible;
+    overflow-y: auto;
+    overflow-x: hidden;
     padding: 10px 10px 0 0;
     position: relative;  
   }
@@ -28,6 +28,7 @@
     word-wrap: break-word;   
     cursor: pointer;
     display: block;
+
     h5 {
       text-align: center;
       margin: 5px;
